@@ -1,5 +1,10 @@
 2002-09-29  Marek Michalkiewicz  <marekm@amelek.gda.pl>
 
+	* configure.in (AVR_CRT_MEGA): Add crtm16.o.
+	* include/avr/iom16.h: New, from Magnus Johansson <rnd@bredband.net>.
+
+2002-09-29  Marek Michalkiewicz  <marekm@amelek.gda.pl>
+
 	* include/avr/delay.h: New.
 	* configure.in (AM_INIT_AUTOMAKE): Update version.
 
